# WebGPU_Cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  compile_commands.json  utils.cmake
headers/: common.h
resources/: game_console.mtl  pyramid.txt  shader.wgsl  yog.mtl
src/: main.cpp  webgpu-utils.cpp
src/adapter/: adapter.hpp
src/command/: command.cpp  command.hpp
src/device/: device.cpp  device.hpp
src/instance/: instance.hpp
src/queue/: queue.hpp
src/renderpass/: renderpass.cpp  renderpass.hpp
src/surface/: surface.hpp
src/swapchain/: swapchain.cpp  swapchain.hpp
src/window/: window.cpp  window.hpp
